[package]
name = "image_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
uuid = {version = "1.7.0",features = ["v4","fast-rng","macro-diagnostics"]}
dotenv = "0.15.0"